Components section updated for Book and Order service
