# order-service/src/main/java/com/anitechcs/orderservice/api/OrderApi.java
@@ -5,11 +5,11 @@
  */
 package com.anitechcs.orderservice.api;
 
-import com.anitechcs.orderservice.model.InlineResponse200;
-import com.anitechcs.orderservice.model.InlineResponse2001;
-import com.anitechcs.orderservice.model.InlineResponse2002;
 import com.anitechcs.orderservice.model.Order;
+import com.anitechcs.orderservice.model.OrderDetailSuccessResponse;
 import com.anitechcs.orderservice.model.OrderErrorResponse;
+import com.anitechcs.orderservice.model.OrderListSuccessResponse;
+import com.anitechcs.orderservice.model.OrderSuccessResponse;
 import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -44,9 +44,9 @@ public interface OrderApi {
      *         or Client error (status code 400)
      *         or Server error (status code 500)
      */
-    @ApiOperation(value = "", nickname = "createNewOrder", notes = "Place a new order", response = InlineResponse2001.class, tags={ "Order-Service", })
+    @ApiOperation(value = "", nickname = "createNewOrder", notes = "Place a new order", response = OrderSuccessResponse.class, tags={ "Order-Service", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success response", response = InlineResponse2001.class),
+        @ApiResponse(code = 200, message = "Success response", response = OrderSuccessResponse.class),
         @ApiResponse(code = 400, message = "Client error", response = OrderErrorResponse.class),
         @ApiResponse(code = 500, message = "Server error", response = OrderErrorResponse.class) })
     @PostMapping(
@@ -54,7 +54,7 @@ public interface OrderApi {
         produces = { "application/json" },
         consumes = { "application/json" }
     )
-    default ResponseEntity<InlineResponse2001> createNewOrder(@ApiParam(value = "Oredr creation content"  )  @Valid @RequestBody(required = false) Order order) {
+    default ResponseEntity<OrderSuccessResponse> createNewOrder(@ApiParam(value = "Oredr creation content"  )  @Valid @RequestBody(required = false) Order order) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
@@ -80,9 +80,9 @@ public interface OrderApi {
      *         or No records found (status code 404)
      *         or Server error (status code 500)
      */
-    @ApiOperation(value = "", nickname = "getAllOrders", notes = "Get All Orders with Pagination", response = InlineResponse200.class, tags={ "Order-Service", })
+    @ApiOperation(value = "", nickname = "getAllOrders", notes = "Get All Orders with Pagination", response = OrderListSuccessResponse.class, tags={ "Order-Service", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success response", response = InlineResponse200.class),
+        @ApiResponse(code = 200, message = "Success response", response = OrderListSuccessResponse.class),
         @ApiResponse(code = 400, message = "Client error", response = OrderErrorResponse.class),
         @ApiResponse(code = 404, message = "No records found", response = OrderErrorResponse.class),
         @ApiResponse(code = 500, message = "Server error", response = OrderErrorResponse.class) })
@@ -90,11 +90,11 @@ public interface OrderApi {
         value = "/order",
         produces = { "application/json" }
     )
-    default ResponseEntity<InlineResponse200> getAllOrders(@NotNull @ApiParam(value = "Number of items service will return", required = true, defaultValue = "10") @Valid @RequestParam(value = "limit", required = true, defaultValue="10") Integer limit,@ApiParam(value = "Offset the results by this number", defaultValue = "0") @Valid @RequestParam(value = "offset", required = false, defaultValue="0") Integer offset) {
+    default ResponseEntity<OrderListSuccessResponse> getAllOrders(@NotNull @ApiParam(value = "Number of items service will return", required = true, defaultValue = "10") @Valid @RequestParam(value = "limit", required = true, defaultValue="10") Integer limit,@ApiParam(value = "Offset the results by this number", defaultValue = "0") @Valid @RequestParam(value = "offset", required = false, defaultValue="0") Integer offset) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"total\" : 6, \"_links\" : { \"next\" : { \"href\" : \"https://openapi-generator.tech\" }, \"last\" : { \"href\" : \"https://openapi-generator.tech\" }, \"prev\" : { \"href\" : \"https://openapi-generator.tech\" }, \"self\" : { \"href\" : \"https://openapi-generator.tech\" }, \"first\" : { \"href\" : \"https://openapi-generator.tech\" } }, \"message\" : \"message\", \"results\" : [ { \"amount\" : 7.061401241503109, \"quantity\" : 5, \"address\" : { \"zip\" : 2, \"firstName\" : \"firstName\", \"lastName\" : \"lastName\", \"city\" : \"city\", \"phone\" : \"phone\", \"addressLine\" : \"addressLine\", \"email\" : \"email\" }, \"orderId\" : 1, \"paymentMethod\" : \"Paypal\", \"shipDate\" : \"2000-01-23T04:56:07.000+00:00\", \"complete\" : false, \"bookId\" : 5, \"status\" : \"placed\" }, { \"amount\" : 7.061401241503109, \"quantity\" : 5, \"address\" : { \"zip\" : 2, \"firstName\" : \"firstName\", \"lastName\" : \"lastName\", \"city\" : \"city\", \"phone\" : \"phone\", \"addressLine\" : \"addressLine\", \"email\" : \"email\" }, \"orderId\" : 1, \"paymentMethod\" : \"Paypal\", \"shipDate\" : \"2000-01-23T04:56:07.000+00:00\", \"complete\" : false, \"bookId\" : 5, \"status\" : \"placed\" } ], \"statusCode\" : 0 }";
+                    String exampleString = "{ \"total\" : 6, \"_links\" : { \"next\" : { \"href\" : \"href\" }, \"last\" : { \"href\" : \"href\" }, \"prev\" : { \"href\" : \"href\" }, \"self\" : { \"href\" : \"href\" }, \"first\" : { \"href\" : \"href\" } }, \"message\" : \"message\", \"results\" : [ { \"amount\" : 7.061401241503109, \"quantity\" : 5, \"address\" : { \"zip\" : 2, \"firstName\" : \"firstName\", \"lastName\" : \"lastName\", \"city\" : \"city\", \"phone\" : \"phone\", \"addressLine\" : \"addressLine\", \"email\" : \"email\" }, \"orderId\" : 1, \"paymentMethod\" : \"Paypal\", \"shipDate\" : \"2000-01-23T04:56:07.000+00:00\", \"complete\" : false, \"bookId\" : 5, \"status\" : \"placed\" }, { \"amount\" : 7.061401241503109, \"quantity\" : 5, \"address\" : { \"zip\" : 2, \"firstName\" : \"firstName\", \"lastName\" : \"lastName\", \"city\" : \"city\", \"phone\" : \"phone\", \"addressLine\" : \"addressLine\", \"email\" : \"email\" }, \"orderId\" : 1, \"paymentMethod\" : \"Paypal\", \"shipDate\" : \"2000-01-23T04:56:07.000+00:00\", \"complete\" : false, \"bookId\" : 5, \"status\" : \"placed\" } ], \"statusCode\" : 0 }";
                     ApiUtil.setExampleResponse(request, "application/json", exampleString);
                     break;
                 }
@@ -115,9 +115,9 @@ public interface OrderApi {
      *         or No records found (status code 404)
      *         or Server error (status code 500)
      */
-    @ApiOperation(value = "", nickname = "getOrderById", notes = "Get order details", response = InlineResponse2002.class, tags={ "Order-Service", })
+    @ApiOperation(value = "", nickname = "getOrderById", notes = "Get order details", response = OrderDetailSuccessResponse.class, tags={ "Order-Service", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "Success response", response = InlineResponse2002.class),
+        @ApiResponse(code = 200, message = "Success response", response = OrderDetailSuccessResponse.class),
         @ApiResponse(code = 400, message = "Client error", response = OrderErrorResponse.class),
         @ApiResponse(code = 404, message = "No records found", response = OrderErrorResponse.class),
         @ApiResponse(code = 500, message = "Server error", response = OrderErrorResponse.class) })
@@ -125,7 +125,7 @@ public interface OrderApi {
         value = "/order/{orderId}",
         produces = { "application/json" }
     )
-    default ResponseEntity<InlineResponse2002> getOrderById(@ApiParam(value = "Id of order to return details",required=true) @PathVariable("orderId") Long orderId) {
+    default ResponseEntity<OrderDetailSuccessResponse> getOrderById(@ApiParam(value = "Id of order to return details",required=true) @PathVariable("orderId") Long orderId) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
                 if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
