# order-service/src/main/java/com/anitechcs/orderservice/model/OrderListSuccessResponseLinksSelf.java
@@ -1,0 +1,79 @@
+package com.anitechcs.orderservice.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.openapitools.jackson.nullable.JsonNullable;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * OrderListSuccessResponseLinksSelf
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
+public class OrderListSuccessResponseLinksSelf   {
+  @JsonProperty("href")
+  private String href;
+
+  public OrderListSuccessResponseLinksSelf href(String href) {
+    this.href = href;
+    return this;
+  }
+
+  /**
+   * Get href
+   * @return href
+  */
+  @ApiModelProperty(value = "")
+
+
+  public String getHref() {
+    return href;
+  }
+
+  public void setHref(String href) {
+    this.href = href;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    OrderListSuccessResponseLinksSelf orderListSuccessResponseLinksSelf = (OrderListSuccessResponseLinksSelf) o;
+    return Objects.equals(this.href, orderListSuccessResponseLinksSelf.href);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(href);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class OrderListSuccessResponseLinksSelf {\n");
+    
+    sb.append("    href: ").append(toIndentedString(href)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
